# CS_AI_OTOMOTO_RESOLVER

./: README.md  build.sh  pyproject.toml
.github/workflows/: main.yml
otomoto_resolver/: app.py
otomoto_resolver/api_scraper/: execute_scraper.py  startup_scraper.py
otomoto_resolver/cache/: get_cache.py
otomoto_resolver/clients/: otomoto_api_client.py  oxylabs_proxy_api_client.py
otomoto_resolver/definition/: ResolverDefinition.json
otomoto_resolver/dynamodb/: ddb.py
otomoto_resolver/factories/: otomot_resolver_factory.py
otomoto_resolver/helpers/: request_body.py
otomoto_resolver/logging/: logger.py
otomoto_resolver/models/: fuel_types.py  resolver_rules.py  transmissions.py
otomoto_resolver/resolver/: otomoto_api_resolver.py  otomoto_resolver.py
otomoto_resolver/response_models/: resolver_response.py
otomoto_resolver/s3/: writer.py
otomoto_resolver/scraper/: execute_scraper.py  start_up_scraper.py
otomoto_resolver/seed_data_resolvers/: dynamodb_streams_seed_data_resolver.py  lambda_event_seed_data_resolver.py  local_seed_data_resolver.py  seed_data_resolver.py
otomoto_resolver/services/: ResultWriterService.py  S3WriterService.py
otomoto_resolver/startup/: app_startup.py
otomoto_resolver/static_files/: audi_models.json  bmw_models.json
otomoto_resolver/templates/: audi.json
